# gemma4-e2b-rdk-s100p

./: .gitignore  LICENSE  README.md  README_zh.md
board_runtime/: README.md  README_zh.md
board_runtime/cpp/: CMakeLists.txt  gemma4_chat.cpp  gemma4_config.h  gemma4_demo.cpp  gemma4_embeddings.cpp  gemma4_embeddings.h  gemma4_golden_verify.cpp  gemma4_kv_cache.cpp  gemma4_kv_cache.h  gemma4_native_tokenizer.cc  gemma4_native_tokenizer.h  gemma4_server.cpp  gemma4_text_bench.cpp  gemma4_text_engine.cpp  gemma4_text_engine.h  gemma4_tokenizer.cpp  gemma4_tokenizer.h  gemma4_vision_engine.cpp  gemma4_vision_engine.h  gemma4_vision_preprocess.cpp  gemma4_vision_preprocess.h  hb_utils.h
docs/: BOARD_VLM_FIX.md  QUANTIZATION_TUTORIAL.md  QUANTIZATION_TUTORIAL_zh.md
leap_llm_gemma4/: install.sh
leap_llm_gemma4/apis/model/: model_factory.gemma4.py
leap_llm_gemma4/models/gemma4/: model.py
leap_llm_gemma4/models/gemma4/blocks/: encoder_layer.py
scripts/calibration/: download_coco_images.py  generate_calib_images.py
scripts/compile/: compile_text_decode.py  compile_vision.py  run_text_compile.sh  run_text_decode_resume.sh  run_vision_compile.sh  setup_swap.sh
scripts/oss/: upload_oss_deploy.py
scripts/verify/: quick_text_verify.py  run_remote_hbm_verify.sh
